# mcp-notes

./: .gitignore  README.md  flake.nix  mcp_http.py  pyproject.toml
echo/: __init__.py  main.py  test_mcp_server.py
echo/clients/: http_client.py  stdio_client.py
echo/llm/: __init__.py  query_agent.py  query_llm.py
echo/server/: __init__.py  http_server.py  mcp_server.py  mcp_stdio.py  stdio_server.py
echo/tools/: __init__.py  tools_generic.py  tools_llm.py  tools_registry.py  tools_vault.py
echo/vault/: __init__.py  vault.py  vault_obsidian.py
src/: mcp_server.py  query_llm.py  test_mcp_server.py  tools_llm.py  tools_vault.py  vault.py  vault_obsidian.py
