[project]
name = "echo"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "llama-index",
    "llama-index-embeddings-openai",
    "openai",
    "watchdog",
    "numpy",
    "langchain-community",
    "langchain-text-splitters",
    "langchain-openai",
    "faiss-cpu",
]